@@ -2,7 +2,7 @@ Source: libdshconfig
 Section: libs
 Priority: optional
 Maintainer: Junichi Uekawa <dancer@debian.org>
-Build-Depends: debhelper (>> 3.0.0), libtool
+Build-Depends: debhelper (>> 3.0.0), libtool, d-shlibs
 Standards-Version: 3.5.6
 
 Package: libdshconfig0
@@ -18,7 +18,7 @@ Description: configuration file parser library for dsh - runtime
 Package: libdshconfig0-dev
 Architecture: any
 Section: devel
-Depends: libdshconfig0 (= ${Source-Version})
+Depends: libdshconfig0 (= ${Source-Version}), ${devlibs:Depends}
 Provides: libdshconfig-dev
 Conflicts: libdshconfig-dev
 Description: configuration file parser library for dsh - development
