@@ -1,3 +1,7 @@
+2002-05-04  Junichi Uekawa  <dancer@debian.org>
+
+	* debian/rules: use d-shlibmove instead.
+
 2002-05-01  Junichi Uekawa  <dancer@debian.org>
 
 	* debian/changelog: mark for release.
